syntax = "proto3";

service StoryService {
  rpc InitStory(InitStoryRequest) returns (StoryResponse) {}
  rpc DeleteStory(DeleteStoryRequest) returns (StoryResponse) {}
}

// Requests
message InitStoryRequest {
  string storyID = 1;
  string userID  = 2;
  string username = 3;
  string userEmail = 4;
  string title = 5;
  string jsonData = 6;
}

message DeleteStoryRequest {
  string storyID = 1;
  string userID  = 2;
}

// Responses
message Story {
  string storyID = 1;
  string userID = 2;
  string title = 3;
  string jsonData = 4;
  string createdOn = 5;
  string updatedOn = 6;
}

message StoryData {
  Story story = 1;
}

message StoryResponse {
  string status = 1;
  string message = 2;
  StoryData data = 3;
}
